added some enpoints, changes in metrics calculation

--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,8 @@ six==1.16.0
 ta==0.11.0
 tzdata==2024.2
 urllib3==2.2.3
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+python-multipart==0.0.6
+pydantic==2.5.0
+websockets==12.0
