--- a/Front/pubspec.yaml
+++ b/Front/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   http: ^1.1.0 
-
+  file_picker: ^6.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
