--- a/Front/pubspec.yaml
+++ b/Front/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.1.0 
   file_picker: ^6.1.1
   csv: ^6.0.0
+  flutter_multi_formatter: ^2.13.10
 dev_dependencies:
   flutter_test:
     sdk: flutter
