--- a/Front/pubspec.yaml
+++ b/Front/pubspec.yaml
@@ -38,7 +38,9 @@ dependencies:
   http: ^1.1.0 
   file_picker: ^6.1.1
   csv: ^6.0.0
+  excel: ^4.0.6
   flutter_multi_formatter: ^2.13.10
+  universal_html: ^2.0.8
 dev_dependencies:
   flutter_test:
     sdk: flutter
