--- a/Front/pubspec.yaml
+++ b/Front/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   excel: ^4.0.6
   flutter_multi_formatter: ^2.13.10
   universal_html: ^2.0.8
+  data_table_2: ^2.7.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
